Fix URL encoding compile error in 1.5.1